@@ -45,6 +45,7 @@ enum
 	TNY_MSG_HEADER_LIST_MODEL_DATE_SENT_COLUMN,
 	TNY_MSG_HEADER_LIST_MODEL_DATE_RECEIVED_COLUMN,
 	TNY_MSG_HEADER_LIST_MODEL_INSTANCE_COLUMN,
+	TNY_MSG_HEADER_LIST_MODEL_FLAGS_COLUMN,
 	TNY_MSG_HEADER_LIST_MODEL_NUM_COLUMNS
 };
 
