@@ -1,3 +1,8 @@
+05-24-2006  Florian Boor  <florian.boor@kernelconcepts.de>
+
+	* Support for mail status flags.
+	* Minor fixes.
+
 XX-YY-2006  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* More ChangeLog items coming soon. Really.
